Correct padding and gap values to match README.md

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,7 +12,7 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
-  padding: 10px;
+  padding: 8px;
   display: flex;
   justify-content: space-between;
 }
@@ -21,7 +21,7 @@ body {
 .right {
   display: flex;
   align-items: center;
-  gap: 15px;
+  gap: 16px;
 }
 
 .profile-image {
@@ -58,5 +58,5 @@ ul {
   padding: 0px;
   margin: 0px;
   display: flex;
-  gap: 20px;
+  gap: 16px;
 }
